Bug 1541679 - Skip pseudo frames when finding multicol containing block for reframing. r=bzbarsky

This patch does something similar to GetIBContainingBlockFor() because
pseudo frames are not good reframe target.

Differential Revision: https://phabricator.services.mozilla.com/D26858